# DarkCore

./: .gitignore  7z_DarkCore_Config.txt  CMakeLists.txt  DARKCORE_VS2013_SLN.bat  DarkCore.sln  README.md  appveyor.yml  c_flag_overrides.cmake  controller.html  cxx_flag_overrides.cmake
DarkCore/: DarkCore.vcxproj
libs/python35/DLLs/: _ctypes_test.pyd  _testbuffer.pyd  _testcapi.pyd  _testimportmultiple.pyd  _testmultiphase.pyd  _tkinter.pyd
libs/python35/lib/: _tkinter.lib  python3.lib  python35.lib  python35_d.lib
plugins/Examples/: example_plugin.py
plugins/halo_online/: __init__.py
src/: DarkCore.hpp  DarkCore.rc  Main.cpp  Main.hpp  Platform.hpp  resource.h
src/Core/: Component.cpp  Component.hpp  Container.cpp  Container.hpp
src/Logging/: Debug.cpp  Debug.hpp  LogComponent.cpp  LogComponent.hpp
src/Memory/: D3D9.cpp  D3D9.hpp  Memory.cpp  Memory.hpp
src/Python/: Python.cpp  Python.hpp  PythonComponent.cpp  PythonComponent.hpp
src/WebSockets/: ServerComponent.cpp  ServerComponent.hpp  WebSockets.cpp  WebSockets.hpp
